--- a/Who Pays For Pizza/Who Pays For Pizza.vcxproj
+++ b/Who Pays For Pizza/Who Pays For Pizza.vcxproj
@@ -125,6 +125,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StreamLine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StreamLine.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
